--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -1,5 +1,6 @@
 ### mysql的逻辑结构
 1.连接层 、服务层、引擎层、存储层
 ### 引擎
-![Image text](https://github.com/spicwo/Note/blob/main/Mysql/Pic/m1-1.jpg)
+![Image text](../pic/m1-1.jpg)
+
 
