--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -8,5 +8,6 @@
 2.索引失效
 3.Join
 4.服务器优化
-
+### SQL执行的加载顺序
+from -> where -> join on -> group by -> having -> select -> distinct -> orderby -> limit
 
