--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -10,4 +10,7 @@
 4.服务器优化
 ### SQL执行的加载顺序
 from -> where -> join on -> group by -> having -> select -> distinct -> orderby -> limit
-
+### 7种Join理论
+select * from tableA A left join tableB B on A.id = B.id where B.id = null
+select * from tableA A full outer join tableB B on A.id = B.id
+select * from tableA A full outer join tableB B on A.id = B.id where A.id = null or B.id = null
