--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -11,6 +11,6 @@
 ### SQL执行的加载顺序
 from -> where -> join on -> group by -> having -> select -> distinct -> orderby -> limit
 ### 7种Join理论
-select * from tableA A left join tableB B on A.id = B.id where B.id = null
-select * from tableA A full outer join tableB B on A.id = B.id
-select * from tableA A full outer join tableB B on A.id = B.id where A.id = null or B.id = null
+1.select * from tableA A left join tableB B on A.id = B.id where B.id = null
+2.select * from tableA A full outer join tableB B on A.id = B.id 全连接（mysql不存在这种语法）select * from tableA A left Join tableB B on A.id = B.id union select * from tableA A right Join tableB B on A.id = B.id (union自带去重，union all则没有去重)
+3.select * from tableA A full outer join tableB B on A.id = B.id where A.id = null or B.id = null（mysql不存在这种语法）select * from tableA A left Join tableB B on A.id = B.id where B.id = null union select * from tableA A right Join tableB B on A.id = B.id where A.id = null
