--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -1,6 +1,6 @@
 ### mysql的逻辑结构
 1.连接层 、服务层、引擎层、存储层
-### 引擎
+### 存储引擎
 ![Image text](../Pic/m1-1.png)
 1.InnoDB MyISAM
 ### SQL性能下降的原因
@@ -13,7 +13,19 @@ from -> where -> join on -> group by -> having -> select -> distinct -> orderby 
 ### 7种Join理论
 ```
 1.select * from tableA A left join tableB B on A.id = B.id where B.id = null
-2.select * from tableA A full outer join tableB B on A.id = B.id 全连接（mysql不存在这种语法）select * from tableA A left Join tableB B on A.id = B.id union select * from tableA A right Join tableB B on A.id = B.id (union自带去重，union all则没有去重)
-3.select * from tableA A full outer join tableB B on A.id = B.id where A.id = null or B.id = null（mysql不存在这种语法）select * from tableA A left Join tableB B on A.id = B.id where B.id = null union select * from tableA A right Join tableB B on A.id = B.id where A.id = null
+2.select * from tableA A full outer join tableB B on A.id = B.id 全连接（mysql不存在这种语法）
+select * from tableA A left Join tableB B on A.id = B.id union select * from tableA A right Join tableB B on A.id = B.id (union自带去重，union all则没有去重)
+3.select * from tableA A full outer join tableB B on A.id = B.id where A.id = null or B.id = null（mysql不存在这种语法）
+select * from tableA A left Join tableB B on A.id = B.id where B.id = null union select * from tableA A right Join tableB B on A.id = B.id where A.id = null
 ```
+### 索引
+#### 什么是索引
+```
+索引是一种数据结构
 
+```
+#### 为什么要用索引？
+```
+提高查找效率，eg 新华字典的目录
+```
+#### 索引怎么提高查找效率？
