--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -28,4 +28,8 @@ select * from tableA A left Join tableB B on A.id = B.id where B.id = null union
 ```
 提高查找效率，eg 新华字典的目录
 ```
-#### 索引怎么提高查找效率？
+#### 索引
+
+#### 索引的缺点
+索引是一张表，保存了主键与索引字段，并指向实体表的记录，占据空间
+每次更新表都要更新索引
