--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -1,7 +1,7 @@
 ### mysql的逻辑结构
 1.连接层 、服务层、引擎层、存储层
 ### 存储引擎
-![Image text](../Pic/m1-1.png)
+![Image text](../m1-1.png)
 1.InnoDB MyISAM
 ### SQL性能下降的原因
 1.sql语句烂
