--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -22,15 +22,18 @@ select * from tableA A left Join tableB B on A.id = B.id where B.id = null union
 ### 索引
 #### 什么是索引
 ```
-索引是一种数据结构
+索引是一种排好序的数据结构
 
 ```
 #### 为什么要用索引？
 ```
-提高查找效率，eg 新华字典的目录
+提高查找效率，降低IO，CPU损耗，eg 新华字典的目录，
 ```
-#### 索引
-
 #### 索引的缺点
-索引是一张表，保存了主键与索引字段，并指向实体表的记录，占据空间
+索引是一张表，保存了主键与索引字段，并指向实体表的记录，占据空间  
 每次更新表都要更新索引
+#### 什么情况适合加索引？什么时候不适合
+#### 性能瓶颈
+1. CPU饱和
+2. IO 
+3. 服务器硬件
