--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -37,3 +37,10 @@ select * from tableA A left Join tableB B on A.id = B.id where B.id = null union
 1. CPU饱和
 2. IO 
 3. 服务器硬件
+### explain（能干嘛）
+1.表的读取顺序
+2.数据读取操作的操作类型
+3.哪些索引可以使用
+4.哪些索引被实际使用
+5.表之间的引用
+6.每张表有多少行被优化器查询
