--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -44,3 +44,15 @@ select * from tableA A left Join tableB B on A.id = B.id where B.id = null union
 4.哪些索引被实际使用
 5.表之间的引用
 6.每张表有多少行被优化器查询
+
+### 避免索引失效
+1.全值匹配
+2.最佳左前缀法则
+3.不再索引列上做任何操作（计算、函数、自动或手动类型转换）
+4.存储引擎不能使用索引中范围条件右边的列
+5.尽量使用覆盖索引
+6.mysql在使用不等于时无法使用索引
+7.is null ，is not null无法使用索引
+8.like 以%开通索引失效
+9.字符串不加单引号索引失效
+10.少用or，用它来连接时会索引失效
