--- a/Mysql/m1.md
+++ b/Mysql/m1.md
@@ -53,6 +53,7 @@ select * from tableA A left Join tableB B on A.id = B.id where B.id = null union
 5.尽量使用覆盖索引
 6.mysql在使用不等于时无法使用索引
 7.is null ，is not null无法使用索引
-8.like 以%开通索引失效
-9.字符串不加单引号索引失效
-10.少用or，用它来连接时会索引失效
+8.like 以%开头索引失效
+避免like以%开头索引失效可以通过覆盖索引
+10.字符串不加单引号索引失效
+11.少用or，用它来连接时会索引失效
